syntax = "proto3";

package simpleagent;

option go_package = "pkg/proto/pbgo"; // golang


message HostnameRequest {}

message HostnameReply {
    string hostname = 1;
}

message ExecTaskRequest {
    string name = 1;
    string command = 2;
}

message ExecTasksRequest {
    repeated ExecTaskRequest exectasks = 1;
}

message ExecTaskReply {
    string name = 1;
    string uuid = 2;
    string cmd = 3;
    string result = 4;
    string  error = 5;
    bool success = 6;
}

message ExecTasksReply {
    repeated ExecTaskReply execTasksres = 1;
}
